# password-manager

./: .env.example  .gitignore  CHANGELOG.md  README.md  database.py  encryption.py  import_plaintext_json.py  main.py  mypy.ini  password_manager.py  pyproject.toml  requirements.txt  ruff.toml  run_api.py
.github/workflows/: ci.yml
docs/: SECURITY.md  migrate_to_phase1.md
migrations/: sqlite_to_sqlcipher.py
password_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pm/: app.py  settings.py
pm/api/: deps.py  main.py  routes_stub.py
pm/core/: models.py
pm/core/alerts/: rotation.py
pm/core/crypto/: kdf.py  passwords.py  secrets.py
pm/core/persistence/: db.py  repository.py
pm/core/services/: breach_service.py  vault_service.py
pm/infra/: keyring.py  logging.py  platform_paths.py
pm/sync/: base.py
pm/sync/plan/: snapshot.py
pm/sync/providers/: google_drive.py
pm/ui_bridge/: notify.py
pm_core/: __init__.py  clipboard.py  config.py  export_import.py  kdf.py  logging_setup.py  migration.py  rotation.py  session_lock.py  settings_store.py  vault_crypto.py
pm_core/ui/: dialogs.py
scripts/: INTEGRATION_NOTES.md  build_ui.py  dev.py  release.py
tests/: test_export_import.py  test_kdf.py  test_settings_store.py
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: api.ts  main.tsx  routes.tsx  theme.ts  types.ts
ui/src/components/: AppLayout.tsx  ConfirmDialog.tsx  EntryDialog.tsx  PasswordGenDialog.tsx  ViewSecretsDialog.tsx
ui/src/pages/: Layout.tsx  Setup.tsx  Unlock.tsx  Vault.tsx
